--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
+      
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
     <script src="sketch.js" type="text/javascript"></script>
 
